--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,7 @@
 ---
 import "@/styles/globals.css";
+import Navbar from "@/components/Navbar.astro";
+
 interface Props {
   title: string;
 }
@@ -22,6 +24,7 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body class="h-screen">
+    <Navbar />
     <main class="h-full">
       <slot />
     </main>
