fix: update container class to max-w-screen-xl for Navbar and index page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,8 +7,7 @@ import Layout from "@/layouts/Layout.astro";
     <section
         class="relative pt-32 pb-32 overflow-x-hidden from-slate-500/10 bg-[url(../images/home/bg-1.png)] bg-no-repeat bg-cover"
         id="home">
-        <div class="container">
-
+        <div class="max-w-screen-xl mx-auto">
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-6 items-center">
                 <div class="text-sm py-20 px-10">
                     <span
