style: update navbar and hero section colors to enhance visual consistency

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Layout from "@/layouts/Layout.astro";
                         class="inline-flex py-2 text-lg text-black font-medium items-center justify-center rounded-full">
                         <i data-lucide="minus"></i> La Mejor Tienda de Electrónicos</span>
                     <h1 class="md:text-6xl/tight text-4xl text-dark tracking-normal leading-normal font-bold mb-4 mt-6">
-                        La Mejor Selección de <span class="text-primary"> Electrónicos Online </span></h1>
+                        La Mejor Selección de <span class="text-[#264193]"> Electrónicos Online </span></h1>
                     <p class="text-base font-medium text-muted leading-7 mt-5 capitalize">Encuentra los mejores auriculares,
                         monitores, cámaras de seguridad, laptops, tablets y teléfonos. Compra fácil, compara precios.</p>
                     <div class="flex flex-wrap items-center justify-center gap-3 lg:justify-normal mt-9">
@@ -28,7 +28,7 @@ import Layout from "@/layouts/Layout.astro";
 
                     <div class="absolute bottom-3/4 -end-14 2xl:end-8 hidden xl:block">
                         <div class="flex items-center gap-2 p-2 pe-6 rounded-full bg-white shadow-2xl">
-                            <div class="rounded-full bg-primary h-9 w-9 items-center justify-center flex">
+                            <div class="rounded-full bg-[#264193] h-9 w-9 items-center justify-center flex">
                                 <i data-lucide="codesandbox" class="h-6 w-6 text-white"></i>
                             </div>
                             <div class="">
@@ -40,7 +40,7 @@ import Layout from "@/layouts/Layout.astro";
 
                     <div class="absolute bottom-28 start-6 hidden xl:block">
                         <div class="flex items-center gap-2 p-2 pe-6 rounded-full bg-white shadow-2xl">
-                            <div class="rounded-full bg-primary h-9 w-9 items-center justify-center flex">
+                            <div class="rounded-full bg-[#264193] h-9 w-9 items-center justify-center flex">
                                 <i data-lucide="headset" class="h-6 w-6 text-white"></i>
                             </div>
                             <div class="">
