--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -2,13 +2,13 @@
 // Navbar component extracted from reference
 ---
 
-<nav class="navbar fixed top-0 start-0 end-0 z-999 transition-all duration-500 py-3 lg:py-5 items-center shadow-sm lg:shadow-none [&.is-sticky]:bg-white group [&.is-sticky]:shadow-md bg-white lg:bg-transparent" id="navbar">
-    <div class="container mx-auto px-4 lg:px-6">
+<nav class="fixed top-0 start-0 end-0 z-999 transition-all duration-500 py-3 lg:py-5 items-center shadow-sm lg:shadow-none [&.is-sticky]:bg-white group [&.is-sticky]:shadow-md bg-white lg:bg-transparent" id="navbar">
+    <div class="max-w-screen-xl mx-auto px-4 lg:px-6 py-1">
         
         <div class="flex lg:flex-nowrap flex-wrap items-center">
 
             <a href="/" class="flex items-center">
-                <img src="/src/assets/images/brand/novicompu.png" class="sm:h-8 lg:h-9 flex" alt="Novicompu Logo">
+                <img src="/src/assets/images/brand/novicompu.png" class="w-36 md:w-40 flex" alt="Novicompu Logo">
             </a>
 
             <div class="lg:hidden flex items-center ms-auto px-2.5">
@@ -20,25 +20,25 @@
             <div class="navigation hs-collapse transition-all duration-300 lg:basis-auto basis-full grow hidden items-center justify-center lg:flex mx-auto overflow-hidden mt-4 lg:mt-0 nav-light bg-white lg:bg-transparent rounded-lg lg:rounded-none shadow-lg lg:shadow-none" id="navbarCollapse">
                 <ul class="navbar-nav flex-col lg:flex-row gap-y-1 lg:gap-y-2 flex lg:items-center justify-center py-4 lg:py-0 px-4 lg:px-0" id="navbar-navlist">
                     <li class="nav-item mx-0 lg:mx-1.5 transition-all text-dark lg:text-black group-[&.is-sticky]:text-dark all duration-300 hover:text-[#264193] [&.active]:!text-[#264193] group-[&.is-sticky]:[&.active]:text-[#264193]">
-                        <a class="nav-link inline-flex items-center text-base lg:text-base font-medium py-2 lg:py-0.5 px-3 lg:px-2 capitalize rounded-md hover:bg-gray-50 lg:hover:bg-transparent transition-colors duration-200" href="#home">Inicio</a>
+                        <a class="nav-link inline-flex items-center text-sm font-medium py-2 lg:py-0.5 px-3 lg:px-2 capitalize rounded-md hover:bg-gray-50 lg:hover:bg-transparent transition-colors duration-200" href="#home">Inicio</a>
                     </li>
 
                     <li class="nav-item mx-0 lg:mx-1.5 transition-all text-dark lg:text-black group-[&.is-sticky]:text-dark duration-300 hover:text-[#264193] [&.active]:!text-[#264193] group-[&.is-sticky]:[&.active]:text-[#264193]">
-                        <a class="nav-link inline-flex items-center text-base lg:text-base font-medium py-2 lg:py-0.5 px-3 lg:px-2 capitalize rounded-md hover:bg-gray-50 lg:hover:bg-transparent transition-colors duration-200" href="#features">Características</a>
+                        <a class="nav-link inline-flex items-center text-sm font-medium py-2 lg:py-0.5 px-3 lg:px-2 capitalize rounded-md hover:bg-gray-50 lg:hover:bg-transparent transition-colors duration-200" href="#features">Características</a>
                     </li>
 
                     <li class="nav-item mx-0 lg:mx-1.5 transition-all text-dark lg:text-black group-[&.is-sticky]:text-dark duration-300 hover:text-[#264193] [&.active]:!text-[#264193] group-[&.is-sticky]:[&.active]:text-[#264193]">
-                        <a class="nav-link inline-flex items-center text-base lg:text-base font-medium py-2 lg:py-0.5 px-3 lg:px-2 capitalize rounded-md hover:bg-gray-50 lg:hover:bg-transparent transition-colors duration-200" href="#testimonial">Testimonios</a>
+                        <a class="nav-link inline-flex items-center text-sm font-medium py-2 lg:py-0.5 px-3 lg:px-2 capitalize rounded-md hover:bg-gray-50 lg:hover:bg-transparent transition-colors duration-200" href="#testimonial">Testimonios</a>
                     </li>
 
                     <li class="nav-item mx-0 lg:mx-1.5 transition-all text-dark lg:text-black group-[&.is-sticky]:text-dark duration-300 hover:text-[#264193] [&.active]:!text-[#264193] group-[&.is-sticky]:[&.active]:text-[#264193]">
-                        <a class="nav-link inline-flex items-center text-base lg:text-base font-medium py-2 lg:py-0.5 px-3 lg:px-2 capitalize rounded-md hover:bg-gray-50 lg:hover:bg-transparent transition-colors duration-200" href="#contact">Contacto</a>
+                        <a class="nav-link inline-flex items-center text-sm font-medium py-2 lg:py-0.5 px-3 lg:px-2 capitalize rounded-md hover:bg-gray-50 lg:hover:bg-transparent transition-colors duration-200" href="#contact">Contacto</a>
                     </li>
                 </ul>
             </div>
 
             <div class="ms-auto shrink hidden lg:inline-flex gap-2">
-                <a href="#" class="py-2 px-4 lg:px-6 inline-flex items-center gap-2 rounded-md text-sm lg:text-base text-white bg-[#264193] hover:bg-[#1d325f] transition-all duration-500 font-medium">
+                <a href="#" class="py-2 px-4 lg:px-6 inline-flex items-center gap-2 rounded-md text-sm text-white bg-[#264193] hover:bg-[#1d325f] transition-all duration-500 font-medium">
                     <i data-lucide="download-cloud" class="h-4 w-4 fill-white/40"></i>
                     <span class="hidden sm:block">Descargar</span>
                 </a>
