--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,15 +7,15 @@ import Layout from "@/layouts/Layout.astro";
     <section
         class="relative pt-32 pb-32 overflow-x-hidden from-slate-500/10 bg-[url(../images/home/bg-1.png)] bg-no-repeat bg-cover"
         id="home">
-        <div class="container mx-auto">
+        <div class="max-w-screen-xl mx-auto">
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-6 items-center">
                 <div class="text-sm py-20 px-10">
                     <span
-                        class="inline-flex py-2 text-lg text-black font-medium items-center justify-center rounded-full">
+                        class="inline-flex py-2 text-sm md:text-base text-black font-medium items-center justify-center rounded-full">
                         <i data-lucide="minus"></i> La Mejor Tienda de Electrónicos</span>
-                    <h1 class="md:text-6xl/tight text-4xl text-dark tracking-normal leading-normal font-bold mb-4 mt-6">
+                    <h1 class="md:text-5xl/tight text-4xl text-gray-900 tracking-normal leading-normal font-bold mb-4 mt-6">
                         La Mejor Selección de <span class="text-[#264193]"> Electrónicos Online </span></h1>
-                    <p class="text-base font-medium text-muted leading-7 mt-5 capitalize">Encuentra los mejores auriculares,
+                    <p class="text-base font-medium text-gray-500 leading-7 mt-5 capitalize">Encuentra los mejores auriculares,
                         monitores, cámaras de seguridad, laptops, tablets y teléfonos. Compra fácil, compara precios.</p>
                     <div class="flex flex-wrap items-center justify-center gap-3 lg:justify-normal mt-9">
                         <img src="/assets/images/store.png" class="h-14" alt="app store image">
@@ -26,7 +26,7 @@ import Layout from "@/layouts/Layout.astro";
                 <div class="mt-4 pt-2 sm:mt-0 sm:pt-0 relative">
                     <img src="/assets/images/furniture.png" alt="" class="h-[600px] max-w-full mx-auto">
 
-                    <div class="absolute bottom-3/4 -end-14 2xl:end-8 hidden xl:block">
+                    <div class="absolute bottom-3/4 -end-14 2xl:end-14 hidden xl:block">
                         <div class="flex items-center gap-2 p-2 pe-6 rounded-full bg-white shadow-2xl">
                             <div class="rounded-full bg-[#264193] h-9 w-9 items-center justify-center flex">
                                 <i data-lucide="codesandbox" class="h-6 w-6 text-white"></i>
@@ -38,13 +38,13 @@ import Layout from "@/layouts/Layout.astro";
                     </div>
 
 
-                    <div class="absolute bottom-28 start-6 hidden xl:block">
+                    <div class="absolute bottom-28 start-14 hidden xl:block">
                         <div class="flex items-center gap-2 p-2 pe-6 rounded-full bg-white shadow-2xl">
                             <div class="rounded-full bg-[#264193] h-9 w-9 items-center justify-center flex">
                                 <i data-lucide="headset" class="h-6 w-6 text-white"></i>
                             </div>
                             <div class="">
-                                <h6 class="text-base font-medium text-default-900">Soporte 24x7</h6>
+                                <h6 class="text-base font-medium text-default-900">Soporte 24/7</h6>
                             </div>
                         </div>
                     </div>
