--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from "@/layouts/Layout.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Novicompu | Electrónica y Tecnología en Ecuador">
     <!-- Hero Section Start -->
     <section
         class="relative pt-32 pb-32 overflow-x-hidden from-slate-500/10 bg-[url(../images/home/bg-1.png)] bg-no-repeat bg-cover"
