--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -12,28 +12,15 @@
             </a>
 
             <div class="lg:hidden flex items-center ms-auto px-2.5">
-                <button class="hs-collapse-toggle p-1 rounded-md hover:bg-gray-100 transition-colors duration-200" type="button" id="hs-unstyled-collapse" data-hs-collapse="#navbarCollapse">
+                <button class="hs-collapse-toggle p-1 rounded-md hover:bg-gray-100 transition-colors duration-200" type="button" id="hs-unstyled-collapse" data-hs-collapse="#navbarCollapse" aria-label="Abrir menú">
                     <i data-lucide="menu" class="h-6 w-6 sm:h-7 sm:w-7 text-black"></i>
                 </button>
             </div>
 
+            <!-- Navigation removed per request -->
             <div class="navigation hs-collapse transition-all duration-300 lg:basis-auto basis-full grow hidden items-center justify-center lg:flex mx-auto overflow-hidden mt-4 lg:mt-0 nav-light bg-white lg:bg-transparent rounded-lg lg:rounded-none shadow-lg lg:shadow-none" id="navbarCollapse">
-                <ul class="navbar-nav flex-col lg:flex-row gap-y-1 lg:gap-y-2 flex lg:items-center justify-center py-4 lg:py-0 px-4 lg:px-0" id="navbar-navlist">
-                    <li class="nav-item mx-0 lg:mx-1.5 transition-all text-dark lg:text-black group-[&.is-sticky]:text-dark all duration-300 hover:text-[#264193] [&.active]:!text-[#264193] group-[&.is-sticky]:[&.active]:text-[#264193]">
-                        <a class="nav-link inline-flex items-center text-sm font-medium py-2 lg:py-0.5 px-3 lg:px-2 capitalize rounded-md hover:bg-gray-50 lg:hover:bg-transparent transition-colors duration-200" href="#home">Inicio</a>
-                    </li>
-
-                    <li class="nav-item mx-0 lg:mx-1.5 transition-all text-dark lg:text-black group-[&.is-sticky]:text-dark duration-300 hover:text-[#264193] [&.active]:!text-[#264193] group-[&.is-sticky]:[&.active]:text-[#264193]">
-                        <a class="nav-link inline-flex items-center text-sm font-medium py-2 lg:py-0.5 px-3 lg:px-2 capitalize rounded-md hover:bg-gray-50 lg:hover:bg-transparent transition-colors duration-200" href="#features">Características</a>
-                    </li>
-
-                    <li class="nav-item mx-0 lg:mx-1.5 transition-all text-dark lg:text-black group-[&.is-sticky]:text-dark duration-300 hover:text-[#264193] [&.active]:!text-[#264193] group-[&.is-sticky]:[&.active]:text-[#264193]">
-                        <a class="nav-link inline-flex items-center text-sm font-medium py-2 lg:py-0.5 px-3 lg:px-2 capitalize rounded-md hover:bg-gray-50 lg:hover:bg-transparent transition-colors duration-200" href="#testimonial">Testimonios</a>
-                    </li>
-
-                    <li class="nav-item mx-0 lg:mx-1.5 transition-all text-dark lg:text-black group-[&.is-sticky]:text-dark duration-300 hover:text-[#264193] [&.active]:!text-[#264193] group-[&.is-sticky]:[&.active]:text-[#264193]">
-                        <a class="nav-link inline-flex items-center text-sm font-medium py-2 lg:py-0.5 px-3 lg:px-2 capitalize rounded-md hover:bg-gray-50 lg:hover:bg-transparent transition-colors duration-200" href="#contact">Contacto</a>
-                    </li>
+                <ul class="navbar-nav flex-col lg:flex-row gap-y-1 lg:gap-y-2 flex lg:items-center justify-center py-2 lg:py-0 px-2 lg:px-0" id="navbar-navlist">
+                    <!-- Empty: Links removed (Inicio, Características, Testimonios, Contacto) -->
                 </ul>
             </div>
 
