--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Layout from "@/layouts/Layout.astro";
 <Layout title="Novicompu | Electrónica y Tecnología en Ecuador">
     <!-- Hero Section Start -->
     <section
-        class="relative pt-24 md:pt-32 pb-16 md:pb-28 overflow-x-hidden from-slate-500/10 bg-[url(../images/home/bg-1.png)] bg-no-repeat bg-cover"
+    class="relative pt-24 md:pt-32 pb-16 md:pb-28 overflow-x-hidden from-slate-500/10 bg-[url(/assets/images/home/bg-1.png)] bg-no-repeat bg-cover"
         id="home" role="region" aria-labelledby="hero-heading">
         <div class="max-w-screen-xl mx-auto px-5 sm:px-8">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-10 md:gap-12 items-center">
